# engineering

./: .editorconfig  .gitignore  .gitlab-ci.yml  .markdownlint.json  .markdownlint.yaml  AGENTS.md  PRD.md  README.md  biome.json  build.gradle.kts  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  settings.gradle.kts
.agents/: README.md
.codex/: README.md
.gitlab/: ci-common.yml  ci-distributed-lock.yml  ci-study.yml
.scripts/: preinstall.ts
backend/: AGENTS.md
build-logic/: AGENTS.md  build.gradle.kts
cloud-studies/: AGENTS.md
coding-test/: AGENTS.md
docs/: AGENTS.md  Fat_JAR와_Classpath의_관계_Classpath가_사라진_걸까.md  Gradle과_Java_애플리케이션_실행_시_사용되는_3가지_OPTS의_차이.md  README.md  api-standard-research.md  generate_index.py  multi-module-design.md  openapi-generator-ts-release.md  prompting.md  래프트_알고리즘의_프로토콜_과정.excalidraw  요즘_개발자를_위한_시스템_설계_수업.book.md  용어집.md  이중화.md  인터넷-통신-과정.md
frontend/: AGENTS.md
gitlab-cicd/: PRD.md
gradle/: libs.versions.toml
infra/: AGENTS.md
tools/issue-agent/: README.md  pyproject.toml
tools/issue-agent/scripts/: issue-workflow.sh  local-workflow-loop.sh
tools/issue-agent/src/main/: __init__.py  cli.py  events.py  gitlab_api.py  models.py  parser.py  skills.py  templates.py  workflow.py
tools/issue-agent/src/main/providers/: __init__.py  base.py  github.py  gitlab.py  gitlab_api.py  local_fs.py
tools/issue-agent/src/test/: test_cli.py  test_events.py  test_gitlab_api.py  test_local_fs_workflow.py  test_parser.py  test_skills.py  test_templates.py  test_workflow.py
(+347 files in other folders)
